--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,7 @@ mod_gzip_item_include mime ^application/x-javascript.*
 mod_gzip_item_exclude mime ^image/.*
 mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </ifModule>
+
+<FilesMatch "\.(woff2|woff|ttf|eot|otf|css|js|jpg|jpeg|png|gif|svg|ico)$">
+  Header set Cache-Control "public, max-age=31536000, immutable"
+</FilesMatch>
