fix: remove unused entries from composer.json

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
           "HexMakina\\LogLaddy\\"   : "lib/LogLaddy/src/",
           "HexMakina\\LocalFS\\"    : "lib/LocalFS/",
           "HexMakina\\Hopper\\"     : "lib/Hopper/src",
-          "HexMakina\\Deadites\\"   : "lib/Deadites/src",
-          "HexMakina\\Debugger\\"   : "lib/Debugger/"
+          "HexMakina\\Deadites\\"   : "lib/Deadites/src"
       }
   },
   "require": {
